<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0000FF"
            android:text="@string/testeEstilo"
            android:padding="16dp"
            android:textColor="@color/white"
            android:textSize="24sp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margem"
            android:orientation="vertical">


            <EditText
                android:id="@+id/edtText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="5"
                android:inputType="text"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto"
                android:textColor="@color/black"
                android:layout_margin="@dimen/margem"
                android:textSize="16sp"
                />

            <Button
                android:id="@+id/buttonAplicar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margem"
                android:text="@string/aplicar" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tamanhoLetra"

                />



            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/skbTamanho"
                android:max="255"
                android:layout_margin="@dimen/activity_horizontal_margin"/>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/estilo"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/chkNegrito"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/negrito" />

                <CheckBox
                    android:id="@+id/chkItalico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/italico" />

                <CheckBox
                    android:id="@+id/chkMaiusculas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maiusculas" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CorLetra"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/rdgCor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdbVermelho"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vermelho" />

                <RadioButton
                    android:id="@+id/rdbVerde"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/verde" />

                <RadioButton
                    android:id="@+id/rdbAzul"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/azul" />

            </RadioGroup>



        </LinearLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>